tests/snapshots/examples_fixtures/type_system__failing__65_adt_nested_constructor_non_exhaustive.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/65_adt_nested_constructor_non_exhaustive.flx
== compile ==
failed (compile)
== diagnostics ==
error[E083]: Non-Exhaustive ADT Match

Match is non-exhaustive: nested `ResultI` patterns under constructor `Boxed` field #1 miss constructors: ErrI.

  examples/type_system/failing/65_adt_nested_constructor_non_exhaustive.flx:14:5
   |
14 |     match w {
   |     ^^^^^^^^^
15 |         Boxed(OkI(v)) -> v,
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 |         Empty -> 0,
   | ^^^^^^^^^^^^^^^^^^^
17 |     }
   | ^^^^^

Hint:
  Add nested arms for ErrI or use a nested catch-all (`_`).
== stdout ==
<not executed>
