tests/snapshots/examples_fixtures/type_system__failing__69_hm_typed_let_infix_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The value of `y` does not match its type annotation.

  --> examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx:9:18
  |
9 |     let y: Int = x + 1
  |                  ^^^^^
  |                  ----- this is `String`
  |            --- but `y` was annotated as `Int`

Help:
  Change `y` to a `Int` value or update the annotation to `String`.
== stdout ==
<not executed>
