tests/snapshots/examples_fixtures/type_system__failing__70_hm_prefix_non_numeric_compile_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/70_hm_prefix_non_numeric_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/70_hm_prefix_non_numeric_compile_mismatch.flx:32:14
   |
32 |     let y = -x
   |              ^
   |              - this expression has type `String`

   |              - unary '-' operand is known at compile time

Note:
  expected type: numeric operand (Int or Float)
  found type: String

Help:
  These two types are not compatible.
  use a numeric operand or convert the value before applying unary '-'
== stdout ==
<not executed>
