tests/snapshots/examples_fixtures/type_system__failing__75_hm_if_non_bool_condition_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx:2:5
  |
2 |     if 1 {
  |     ^^^^^^
3 |         10
  | ^^^^^^^^^^
4 |     } else {
  | ^^^^^^^^^^^^
5 |         20
  | ^^^^^^^^^^
6 |     }
  | ^^^^^

Note:
  expected type: Int
  found type: Bool
  the conflicting types meet at this expression

Help:
  These two types are not compatible.


Warning: missing CFG bytecode binding for IR call dest


Found 1 error and 1 warning.
== stdout ==
<not executed>
