tests/snapshots/examples_fixtures/type_system__failing__76_hm_match_guard_non_bool_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/76_hm_match_guard_non_bool_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
